# cmark-translate

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  windows_icon.rc
cmark_xml/: Cargo.toml
cmark_xml/src/: lib.rs
deepl_api/: Cargo.toml
deepl_api/src/: lib.rs
md_translate_cli/: Cargo.toml
md_translate_cli/src/: main.rs
src/: cmark_xml.rs  deepl.rs  glossary.rs  lib.rs  main.rs  md.rs  trans.rs
