[package]
name = "cmark-translate"
version = "0.2.0"
authors = ["Hanabusa Masahiro <masa@hanabusa.net>"]
description = "Translate CommonMark using DeepL API"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hanabu/cmark-translate"
license = "MIT"
keywords = ["commonmark", "markdown", "translate", "deepl"]
categories = ["text-processing", "localization"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version="4", default-features=false, features=["derive", "std", "usage", "help"] }
comrak = "0.14"
dirs = "4"
env_logger = "0.9"
minidom = "0.15"
log = "0.4"
reqwest = { version="0.11", features=["native-tls", "json"] }
serde = { version="1", features=["derive"] }
toml = "0.5"
tokio = { version="1", features=["macros", "rt"] }
umya-spreadsheet = "0.8" 

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"

[profile.release]
# Make smaller binary
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

