[package]
name = "deepl_api"
version = "0.1.0"
authors = ["Hanabusa Masahiro"]
edition = "2021"
publish = false
license = "MIT"
workspace = ".."

[lib]
name = "deepl_api"
path = "src/lib.rs"

[dependencies]
dirs = "4"
log = "0.4"
reqwest = { version="0.11", features=["native-tls", "json"] }
serde = { version="1", features=["derive"] }
toml = "0.5"

[dev-dependencies]
tokio = { version="1", features=["macros", "rt"] }

