[package]
name = "md-translate"
version = "0.1.0"
authors = ["Hanabusa Masahiro"]
description = "Translate Markdown using DeepL API"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hanabu/md-translate"
license = "MIT"
keywords = ["markdown", "translate", "deepl"]
categories = ["text-processing", "localization"]

[dependencies]
cmark_xml = { path = "../cmark_xml" }
deepl_api = { path = "../deepl_api" }
clap = { version="4", default-features=false, features=["std", "help"] }
env_logger = "0.9"
log = "0.4"
tokio = { version="1", features=["macros", "rt"] }
toml = "0.5"

